# resume

./: .gitignore  .gitmodules  Makefile  README.md  Tectonic.toml  build.py  pyproject.toml  resume.aux  resume.cls  resume.out  resume.tex
src/: _preamble.tex  data.yaml  index.html  index.tex  resume.cls  resume.tex  resume.typ
