[project]
name = "resume"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Noah Hüsser", email = "noah@huesser.dev" }
]
dependencies = ["watchdog~=3.0.0", "weasyprint~=59.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
